🚀 Mega Upgrade: Groq AI Integration, Interactive Quizzes, Mind Mapping, and Deployment Guide

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
 .env
+.env.local
+.env.*.local
 __pycache__/
 *.pyc
 node_modules/
 dist/
 build/
 *.apkg
+venv/
+.venv/
+env/
+.env/
+.DS_Store
+.vscode/
+.idea/
+*.log
+.DS_Store
+frontend/dist
+backend/venv
