📦 Fix: Added missing requirements.txt with groq support

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,15 @@
 fastapi
 uvicorn
-python-multipart
-pypdf
-genanki
-openai
 pydantic
-langchain
-langchain-community
-langchain-openai
-langgraph
-langsmith
+pypdf
 python-dotenv
+google-genai
+openai
+groq
+langchain
+langchain-openai
 langchain-google-genai
-
-
+langchain-groq
+langgraph
+genanki
+python-multipart
