feat: streamline marketing site with premium 3D illustrations, about/contact pages, and beta pricing updates

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@fontsource/outfit": "^5.2.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "anki-apkg-export": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "firebase": "^12.8.0",
     "framer-motion": "^12.26.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
@@ -25,6 +27,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.12.0",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
