--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/outfit": "^5.2.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@supabase/supabase-js": "^2.91.0",
     "anki-apkg-export": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
