feat: improve light mode visibility and cleanup repository

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "pptxgenjs": "^4.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-markdown": "^10.1.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.12.0",
